                       User-Visible wallet Changes

wallet 1.5 (unreleased)

    Fix the table drop order for wallet-admin destroy to avoid violating
    foreign key constraints.  Patch from macrotex.

    Update to rra-c-util 8.2:

    * Implement explicit_bzero with memset if it is not available.
    * Reformat all C source using clang-format 10.
    * Work around Test::Strict not skipping .git directories.
    * Fix warnings with perltidy 20190601 and Perl::Critic 1.134.
    * Fix warnings with Clang 10, GCC 10, and the Clang static analyzer.

    Update to C TAP Harness 4.7:

    * Fix warnings with GCC 10.
    * Reformat all C source using clang-format 10.
    * Fixed malloc error checking in bstrndup.

wallet 1.4 (2018-06-03)

    Substantial improvements to Active Directory support: Add a
    contrib/ad-keytab script that assists with initial setup and examining
    the Active Directory objects, rename some configuration variables to
    reflect that they are relative distinguished names, add a
    configuration variable for the base DN, make sure userPrincipalName is
    created for all keytabs and use it to search, allow creation of a
    service principal, and truncate and make unique long names in AD if
    necessary.  This support should still be considered experimental.

    When getting configuration values from krb5.conf, pass the default
    local realm into the Kerberos appdefault functions.  This will produce
    more correct results with krb5.conf files that specify wallet
    configuration for multiple realms.

    Remove stray references to strlcpy and strlcat that broke builds on
    platforms where those functions are part of libc.  Thanks to Karl
    Kornel for the report.

    Detect the path to Perl during configure, allowing an override by
    setting the PERL environment or configure variable, and use that path
    for all Perl scripts.  This allows wallet to use a version of Perl at
    a non-standard path.  Patches from Karl Kornel.
