@@ -5,6 +5,10 @@ wallet 1.5 (unreleased)
     Fix the table drop order for wallet-admin destroy to avoid violating
     foreign key constraints.  Patch from macrotex.
 
+    In Wallet::Policy::Stanford, fix the default_owner logic for password
+    objects that are group-based rather than host-based.  Thanks,
+    macrotex.  (#82)
+
     Update to rra-c-util 8.2:
 
     * Implement explicit_bzero with memset if it is not available.
